Edits gitignore to ignore temporary kicad files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 build
 
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+
 # Prerequisites
 *.d
 
